add html table element to hold tasks

--- a/index.html
+++ b/index.html
@@ -28,8 +28,57 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+
     <div class="container">
-      <!-- Timeblocks go here -->
+      <table>
+        <tbody>
+          <tr>
+            <td>9 AM</td>
+            <td><input type="text" class="task-input"></td>
+            <td><button class="save-btn">Save</button></td>
+          </tr>
+          <tr>
+            <td>10 AM</td>
+            <td><input type="text" class="task-input"></td>
+            <td><button class="save-btn">Save</button></td>
+          </tr>
+          <tr>
+            <td>11 AM</td>
+            <td><input type="text" class="task-input"></td>
+            <td><button class="save-btn">Save</button></td>
+          </tr>
+          <tr>
+            <td>12 PM</td>
+            <td><input type="text" class="task-input"></td>
+            <td><button class="save-btn">Save</button></td>
+          </tr>
+          <tr>
+            <td>1 PM</td>
+            <td><input type="text" class="task-input"></td>
+            <td><button class="save-btn">Save</button></td>
+          </tr>
+          <tr>
+            <td>2 PM</td>
+            <td><input type="text" class="task-input"></td>
+            <td><button class="save-btn">Save</button></td>
+          </tr>
+          <tr>
+            <td>3 PM</td>
+            <td><input type="text" class="task-input"></td>
+            <td><button class="save-btn">Save</button></td>
+          </tr>
+          <tr>
+            <td>4 AM</td>
+            <td><input type="text" class="task-input"></td>
+            <td><button class="save-btn">Save</button></td>
+          </tr>
+          <tr>
+            <td>5 PM</td>
+            <td><input type="text" class="task-input"></td>
+            <td><button class="save-btn">Save</button></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
