--- a/index.html
+++ b/index.html
@@ -33,49 +33,49 @@
       <table>
         <tbody>
           <tr>
-            <td>9 AM</td>
-            <td><input type="text" class="task-input"></td>
-            <td><button class="save-btn">Save</button></td>
+            <td class = "hour time-block">9 AM</td>
+            <td><input type="text" class="row"></td>
+            <td><button class="saveBtn">Save</button></td>
           </tr>
           <tr>
-            <td>10 AM</td>
-            <td><input type="text" class="task-input"></td>
-            <td><button class="save-btn">Save</button></td>
+            <td class = "hour time-block">10 AM</td>
+            <td><input type="text" class="row"></td>
+            <td><button class="saveBtn">Save</button></td>
           </tr>
           <tr>
-            <td>11 AM</td>
-            <td><input type="text" class="task-input"></td>
-            <td><button class="save-btn">Save</button></td>
+            <td class = "hour time-block">11 AM</td>
+            <td><input type="text" class="row"></td>
+            <td><button class="saveBtn">Save</button></td>
           </tr>
           <tr>
-            <td>12 PM</td>
-            <td><input type="text" class="task-input"></td>
-            <td><button class="save-btn">Save</button></td>
+            <td class = "hour time-block">12 PM</td>
+            <td><input type="text" class="row"></td>
+            <td><button class="saveBtn">Save</button></td>
           </tr>
           <tr>
-            <td>1 PM</td>
-            <td><input type="text" class="task-input"></td>
-            <td><button class="save-btn">Save</button></td>
+            <td class = "hour time-block">1 PM</td>
+            <td><input type="text" class="row"></td>
+            <td><button class="saveBtn">Save</button></td>
           </tr>
           <tr>
-            <td>2 PM</td>
-            <td><input type="text" class="task-input"></td>
-            <td><button class="save-btn">Save</button></td>
+            <td class = "hour time-block">2 PM</td>
+            <td><input type="text" class="row"></td>
+            <td><button class="saveBtn">Save</button></td>
           </tr>
           <tr>
-            <td>3 PM</td>
-            <td><input type="text" class="task-input"></td>
-            <td><button class="save-btn">Save</button></td>
+            <td class = "hour time-block">3 PM</td>
+            <td><input type="text" class="row"></td>
+            <td><button class="saveBtn">Save</button></td>
           </tr>
           <tr>
-            <td>4 AM</td>
-            <td><input type="text" class="task-input"></td>
-            <td><button class="save-btn">Save</button></td>
+            <td class = "hour time-block">4 AM</td>
+            <td><input type="text" class="row"></td>
+            <td><button class="saveBtn">Save</button></td>
           </tr>
           <tr>
-            <td>5 PM</td>
-            <td><input type="text" class="task-input"></td>
-            <td><button class="save-btn">Save</button></td>
+            <td class = "hour time-block">5 PM</td>
+            <td><input type="text" class="row"></td>
+            <td><button class="saveBtn">Save</button></td>
           </tr>
         </tbody>
       </table>
