--- a/index.html
+++ b/index.html
@@ -29,56 +29,78 @@
       <p id="currentDay" class="lead"></p>
     </header>
 
-    <div class="container">
-      <table>
-        <tbody>
-          <tr>
-            <td class = "hour time-block">9 AM</td>
-            <td><input type="text" class="row"></td>
-            <td><button class="saveBtn">Save</button></td>
-          </tr>
-          <tr>
-            <td class = "hour time-block">10 AM</td>
-            <td><input type="text" class="row"></td>
-            <td><button class="saveBtn">Save</button></td>
-          </tr>
-          <tr>
-            <td class = "hour time-block">11 AM</td>
-            <td><input type="text" class="row"></td>
-            <td><button class="saveBtn">Save</button></td>
-          </tr>
-          <tr>
-            <td class = "hour time-block">12 PM</td>
-            <td><input type="text" class="row"></td>
-            <td><button class="saveBtn">Save</button></td>
-          </tr>
-          <tr>
-            <td class = "hour time-block">1 PM</td>
-            <td><input type="text" class="row"></td>
-            <td><button class="saveBtn">Save</button></td>
-          </tr>
-          <tr>
-            <td class = "hour time-block">2 PM</td>
-            <td><input type="text" class="row"></td>
-            <td><button class="saveBtn">Save</button></td>
-          </tr>
-          <tr>
-            <td class = "hour time-block">3 PM</td>
-            <td><input type="text" class="row"></td>
-            <td><button class="saveBtn">Save</button></td>
-          </tr>
-          <tr>
-            <td class = "hour time-block">4 AM</td>
-            <td><input type="text" class="row"></td>
-            <td><button class="saveBtn">Save</button></td>
-          </tr>
-          <tr>
-            <td class = "hour time-block">5 PM</td>
-            <td><input type="text" class="row"></td>
-            <td><button class="saveBtn">Save</button></td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="container">     
+      <div class="row time-block">
+        <div class="col-1 hour">
+          9AM
+        </div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div class="row time-block">
+        <div class="col-1 hour">
+          10AM
+        </div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div class="row time-block">
+        <div class="col-1 hour">
+          11AM
+        </div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div class="row time-block">
+        <div class="col-1 hour">
+          12PM
+        </div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div class="row time-block">
+        <div class="col-1 hour">
+          1PM
+        </div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div class="row time-block">
+        <div class="col-1 hour">
+          2PM
+        </div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div class="row time-block">
+        <div class="col-1 hour">
+          3PM
+        </div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div class="row time-block">
+        <div class="col-1 hour">
+          4PM
+        </div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div class="row time-block">
+        <div class="col-1 hour">
+          5PM
+        </div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
